refactor S3Path and deleted some operations from S3Path